# Vera-Desktop-Pet-App

./: .gitignore  AGENTS.md  OpenCode_CLI_Build_Guide.md  opencode.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: Desktop_Pet_Agent_Orchestration_and_System_Prompt.md  Desktop_Pet_Asset_Animation_Spec_Sheet.md  Desktop_Pet_IPC_and_Database_Reference.md  Desktop_Pet_PRD_Technical_Spec.md  Desktop_Pet_Phase3_Extensibility_Strategy.md  Desktop_Pet_Stitch_Design_Brief.md  architecture-plan.md  architecture-summary.md  pet-state-machine.md  test-report.md
docs/prompts/: phase1_task1_architecture.md  phase1_task2_statemachine.md
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icon.py
src-tauri/src/: db.rs  events.rs  main.rs
src-tauri/src/commands/: agent.rs  alarm_scheduler.rs  alarms.rs  context.rs  fullscreen.rs  gamification.rs  hotkey.rs  mcp.rs  mod.rs  notes.rs  provider.rs  settings.rs  tasks.rs  window.rs
src/assets/sprites/: .gitkeep  bring_me_a_note.json  celebrate.json  gen_sprites.py  happy.json  idle.json  typing_focused.json  waking_up.json  walk.json
src/pet-window/: GreetBubble.tsx  animation-state.ts  canvas-renderer.ts  index.html  index.tsx
src/shared/: hooks.ts  ipc-client.ts  types.ts
src/styles/: globals.css  variables.css
src/utility-window/: AlarmModal.tsx  ClockPanel.tsx  NotesEditor.tsx  Settings.tsx  SettingsPanel.tsx  TaskList.tsx  index.html  index.tsx  main.tsx  utility.css
